production/mongodb/service.yaml
---
  apiVersion: "v1"
  kind: "Service"
  metadata: 
    name: "mongo-db"
    namespace: prod-mongodb
    labels: 
      app: "mongo-db"
  spec: 
    ports: 
      - name: "mongodb"
        port: 27017
        nodePort: 30332
    type: "NodePort"
    selector: 
      app: "mongo-db"
